2011-05-12  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSFileHandle.m:
	* Source/GSHTTPURLHandle.m:
	* Source/win32/NSMessagePort.m:
	* Source/win32/NSMessagePortNameServer.m:
	Include/use errno.h for thread-safe errno support.

2011-05-12  Fred Kiefer <FredKiefer@gmx.de>

	* Source/GSArray.m: Fix keyed decoding for GSMutableArray and
	GSPlaceholderArray.

2011-05-09  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSXMLParser.m: treat unknown/undefined encodings as utf-8
	so we tolerate bad xml documents better.

2011-05-02  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/Additions/GSObjCRuntime.m (GSSelectorFromNameAndTypes):
	With gcc 4.6 libobjc, GSSelectorFromNameAndTypes was calling some
	functions like sel_get_any_typed_uid that were not declared (they're
	declared in objc/objc-api.h which cannot be imported). I had to copy
	over these function declarations, otherwise incorrect function calls
	are generated which corrupt selectors (at least on x86-64).

2011-05-02  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSNumberFormatter.m: Fix broken copying of formatters,
	cleanup/simplify decoding, cleanup/simplify by removif macros.

2011-04-30  Quentin Mathe <quentin.mathe@gmail.com>

	* Tools/autogsdoc.m: Fixed OrderedSymbolDeclarations.plist content to 
	take in account that existing .gsdoc files are usually not regenerated.
	We now create the plist by merging it with the previously output plist 
	file.

2011-04-26  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/NSNumberFormatter.m: Move the body of -init to a method called
	-_NSNumberFormatterInit, and call this in -initWithCoder: so that
	instances created with -initWithCoder: are initialized correctly.

2011-04-26  Eric Wasylishen  <ewasylishen@gmail.com>

	* Headers/Foundation/NSObjCRuntime.h: Add CGFLOAT_MIN and CGFLOAT_MAX

2011-04-14  Adam Fedor  <fedor@gnu.org>

	* Version 1.22.0

2011-04-12  Richard Frith-Macdonald <rfm@gnu.org>
